--- a/package.json
+++ b/package.json
@@ -1,30 +1,42 @@
 {
-  "name": "monopoly",
-  "version": "0.0.0",
-  "description": "A monopoly simulation",
-  "main": "./build/index.js",
-  "scripts": {
-    "build": "tsc",
-    "lint": "eslint . --ext=.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "Gabriel Okamoto",
-  "license": "MIT",
-  "devDependencies": {
-    "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.47.1",
-    "@typescript-eslint/parser": "^5.47.1",
-    "eslint": "^8.31.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^3.5.2",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
-  },
-  "dependencies": {
-    "@umatch/utils": "^1.17.4"
-  }
+    "name": "monopoly",
+    "version": "0.0.0",
+    "description": "A monopoly simulation",
+    "main": "./build/index.js",
+    "scripts": {
+        "build": "tsc",
+        "start": "node ./build/index.js",
+        "dev": "ts-node ./src/index.ts",
+        "simulate": "ts-node ./src/simulate.ts",
+        "lint": "eslint . --ext=.ts",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "Gabriel Okamoto",
+    "license": "MIT",
+    "devDependencies": {
+        "@types/node": "^18.11.18",
+        "@typescript-eslint/eslint-plugin": "^5.47.1",
+        "@typescript-eslint/parser": "^5.47.1",
+        "commitizen": "^4.2.6",
+        "cz-conventional-changelog": "^3.3.0",
+        "eslint": "^8.31.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-import-resolver-typescript": "^3.5.2",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "prettier": "^2.8.1",
+        "ts-node": "^10.9.1",
+        "typescript": "^4.9.4"
+    },
+    "dependencies": {
+        "@umatch/utils": "^1.17.4",
+        "chalk": "^4.1.2",
+        "enquirer": "^2.3.6"
+    },
+    "config": {
+        "commitizen": {
+            "path": "cz-conventional-changelog"
+        }
+    }
 }
