test: make test folder and move simulate.ts from src to test

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
     "parserOptions": {
         "ecmaVersion": 12,
         "sourceType": "module",
-        "project": ["tsconfig.json"]
+        "project": ["tsconfig.base.json"]
     },
     "extends": [
         "plugin:import/recommended",
