--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
     "description": "A monopoly simulation",
     "main": "./build/index.js",
     "scripts": {
-        "build": "tsc",
+        "build": "tsc --build src",
         "start": "node ./build/index.js",
         "dev": "ts-node ./src/index.ts",
-        "simulate": "ts-node ./src/simulate.ts",
+        "simulate": "ts-node test/simulate.ts",
         "lint": "eslint . --ext=.ts",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
