--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,8 +1,9 @@
 {
     "compilerOptions": {
         "target": "es2020",
-        "module": "commonjs",
+        "module": "NodeNext",
         "lib": ["es2020"],
+        "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
         "declaration": false,
         "declarationMap": false,
